# Fantasy_Football

./: .gitignore  README.md  deploy_cloud_function.sh  download_espn_data.py  fantasy_app.py  fantasy_dst.csv  fantasy_profile.json  index.html  luck_test.ipynb  main.py  parse_all_data.ipynb  pyproject.toml  requirements.txt  wd_2023.pickle  wd_2024.pickle  wd_2025.pickle
espn_data/: __init__.py  build_tables.py  ff_probability.py  get_espn_data.py
fantasty/: fantasy_data_2020.csv  munge_espn.R  season12_scores.xlsx
fantasy/: fantasy_data_2019.csv  fantasy_data_2020.csv  fantasy_data_2021.csv  fantasy_data_2022.csv  fantasy_data_2025.csv  munge_espn.R
fantasy/full_player_data/: merged_full_data.csv  player_data_2019.csv  player_data_2020.csv  player_data_2021.csv  player_data_2022.csv
fantasy/waiver_data/: wd_2019.pickle  wd_2020.pickle  wd_2021.pickle
